<resources>
    <string name="no_activity">未知</string>
    <string name="ok">OK</string>
    <string name="permission_location_rationale">The app needs location for context</string>
    <string name="squarecamera__app_name">Minuku</string>
    <string name="action_logout">Logout</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="progress_dialog_account_creation_closure">Your account has been created</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_firstname">Enter your First name</string>
    <string name="hint_enter_lastname">Enter your Last name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="password_requirement">Password must have a number, a small letter, a capital letter, and a symbol(@#$%^+=)</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="tv_forgot_your_password">Forgot your password?</string>
    <string name="tv_text_reset_password">Send Password Reset Email</string>
    <string name="text_login_via">Login using</string>
    <string name="start_using_dreflect">Start Dreflect</string>
    <string name="before_we_start_text">Before we start, could you please give us the following information</string>
    <string-array name="prompt_missed_reasons_arrays">
        <item>I didn\'t get time</item>
        <item>I was too low and tired!</item>
        <item>I don\'t give a damn!</item>
    </string-array>
    <string name="app_name">Availability Study</string>
    <string name="for_partial_subject_inform_title">安裝說明: 需要您的授權</string>
    <string name="for_partial_subject_inform">
        歡迎您參加本研究，為了及時運算及預測您的回覆狀態，應用程式將會需要您授權抓取手機資料。
        權限包含「通知存取權」、「使用者互動資料」，為了能發送通知給您以及得知受測者最近與手機的互動。
        我們會蒐集使用者手機使用相關資料，包含最近使用手機時間、動通知時間，
        但是我們不會儲存任何打字、手機畫面、手機通知的內容。\n若您同意請勾選「我同意」，開始進入實驗應用程式。謝謝
    </string>
    <string name="copyright">Icon made by Freepik, CC 3.0 BY. from www.flaticon.com</string>
    <string name="Iagree">我同意</string>
    <string name="check_permission">前往授權</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="register_username">帳號</string>
    <string name="register_password">密碼</string>
    <string name="register_group">組別</string>
    <string name="register_code">邀請人</string>
    <string name="test_username">測試帳號</string>
    <string name="login_username">帳號</string>
    <string name="login_password">密碼</string>
    <string name="contactList_profile_row_text">你目前的狀態</string>
    <string name="contactList_profile_row_description">【根據手機使用狀況運算】</string>
    <string name="contactList_profile_update_text">更新時間</string>
    <string name="editProfile">編輯</string>
    <string name="openNotificationOrnot">我願意收到通知</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="contact_status_text">目前狀態</string>
    <string name="contact_status_ok_button_text">知道了，去填寫問卷!</string>
    <string name="contact_status_latter_button_text">問卷晚點再填</string>
    <string name="editPage_title">編輯你的個人狀態</string>
    <string name="editPage_submit">確定</string>
    <string name="editPage_cancel">取消</string>
    <string name="editPage_presentWay_title">呈現方式</string>
    <string name="editPage_text_title">選擇你的狀態</string>
    <string name="editPage_timeperiod_title">你想要這個狀態持續多久</string>
    <string name="hour">小時</string>
    <string name="minute">分鐘</string>
    <string name="editPage_graphic_subtitle1">調整你的</string>
    <string name="editPage_graphic_subtitle2">調整顏色</string>
    <string name="editPage_present_text">文字呈現</string>
    <string name="editPage_present_digit">數字呈現</string>
    <string name="editPage_present_graphic">圖像呈現</string>
    <string name="editPage_present_digit_title1">回覆率</string>
    <string name="editPage_present_digit_title2">%</string>
    <string name="self_edit_question_title">你的狀態為</string>
    <string name="self_edit_location_question">1. 請問你主要的地點在哪裡?</string>
    <string name="self_edit_context_information_title">1. 請描述你目前主要的情境</string>
    <string name="self_edit_notFitReason">2. 請問你改變呈現狀態的原因是?</string>
    <string name="self_edit_timePeriod_question1">3. 請問你改變狀態持續</string>
    <string name="self_edit_timePeriod_question2">的原因是?</string>
    <string name="self_edit_show_to_who">4. 你有限定你的狀態只想給哪些聯絡人看到嗎?\n沒有則不用勾選 </string>
    <string name="self_edit_block_to_who">5. 你的狀態有不想給誰看到嗎? </string>
    <string name="self_edit_describe_your_situation">5. 請用一句話形容你現在的情境(狀態)</string>
    <string name="self_edit_questionnaire_title">~修改完你的狀態，請填寫問卷~</string>
    <string name="self_edit_questionnaire_timePeriod_title">狀態將持續</string>
    <string name="self_edit_reason1">想改變呈現方式</string>
    <string name="questionnaire_title">問卷</string>
    <string name="self_question_title">系統偵測你的狀態為</string>
    <string name="context_information_title">1. 請描述你當時主要的情境</string>
    <string name="context_whom">與誰</string>
    <string name="context_whom_other">與誰: 其他</string>
    <string name="context_where">在哪裡</string>
    <string name="context_where_other">在哪裡: 其他</string>
    <string name="context_what">做什麼</string>
    <string name="context_what_other">做什麼: 其他</string>
    <string name="other">其他</string>
    <string name="ideal_question1">2. 請問你覺得當時你</string>
    <string name="ideal_question2">實際的狀態</string>
    <string name="ideal_question3">是如何?</string>
    <string name="showOther_question1">3. 請問你想要</string>
    <string name="showOther_question2">呈現給聯絡人的狀態</string>
    <string name="asOriginal">同實際狀態</string>
    <string name="showOther_status">狀態</string>
    <string name="notFitReason_high_digit">目前呈現的回覆率過高</string>
    <string name="notFitReason_way">不喜歡現在的呈現方式</string>
    <string name="notFitReason_low_digit">目前呈現的回覆率過低</string>
    <string name="notFitReason_ratio_text">目前呈現的狀態不準</string>
    <string name="showDifferent_question">4. 請問為甚麼你想要聯絡人看到的狀態\n與實際狀態不同呢?</string>
    <string name="necessary">必填</string>
    <string name="showDifferent_less_bother">想減少打擾</string>
    <string name="showDifferent_donot_bother">我不想被打擾</string>
    <string name="showDifferent_bother">我可以被打擾</string>
    <string name="showDifferent_accurate">想要讓狀態精準一點</string>
    <string name="showDifferent_blurred">想要讓狀態模糊一些</string>
    <string name="showDifferent_hide">不想讓別人知道我的狀態</string>
    <string name="self_show_to_who">5. 你有限定你的狀態只想給哪些聯絡人看到嗎?\n沒有則不用勾選 </string>
    <string name="self_block_to_who">6. 你的狀態有不想給誰看到嗎? </string>
    <string name="submit">提交</string>
    <string name="sender_status_question_title1">你查看</string>
    <string name="sender_status_question_title2">的狀態為</string>
    <string name="sender_question_title">假設對方的狀態呈現方式如下</string>
    <string name="sender_question1">4. 請你根據能幫助你判斷「對方現在有空或是沒空」給予排序評分</string>
    <string name="sender_question1_description">最能幫助你的給3分，依序給2分及1分(若覺得相同可給同分)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="sender_question2">5. 你比較想要看到哪種呈現方式?\n請排序評分</string>
    <string name="sender_question2_description">最想看到的給3分，依序給2分及1分(若覺得相同可給同分)</string>
    <string name="sender__question_using_purpose">2. 請問你查看對方的狀態的目的是?</string>
    <string name="communicate">要和對方溝通</string>
    <string name="communicate_notation">若選擇「要和對方溝通」請繼續回答下一題，否則請跳過下一題</string>
    <string name="curious">純粹好奇對方狀態</string>
    <string name="boring">無聊打發時間</string>
    <string name="sender__question_purpose">3. 請問你的溝通目的是?</string>
    <string name="inform">只是要告知他事情</string>
    <string name="short_answer">僅需要對方簡短的回覆</string>
    <string name="long_time">要長時間與他溝通(聊天、討論...)</string>
</resources>