<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/editPage_present_digit_title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editPage_digit_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textSize="40dp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/editPage_present_digit_title2"
        app:layout_constraintBottom_toBottomOf="@+id/editPage_digit_rate"
        app:layout_constraintStart_toEndOf="@+id/editPage_digit_rate"
        app:layout_constraintTop_toTopOf="@+id/editPage_digit_rate" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/seekBarProgressDigit"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:isb_max="100"
        app:isb_show_tick_texts="true"
        app:isb_thumb_color="@color/colorDarkPink"
        app:isb_tick_texts_size="9dp"
        app:isb_ticks_count="11"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editPage_digit_rate" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/editPage_timeperiod_title"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/seekBarProgressDigit" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34">

        <Spinner
            android:id="@+id/hour_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/hour"
            app:layout_constraintEnd_toEndOf="@+id/hour_spinner"
            app:layout_constraintStart_toStartOf="@+id/hour_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/min_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour_spinner"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:text="@string/minute"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/min_spinner"
            app:layout_constraintStart_toStartOf="@+id/min_spinner"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>