<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progressCircle"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:cpb_background_progressbar_color="@color/colorGray"
        app:cpb_background_progressbar_width="24dp"
        app:cpb_progress="0"
        app:cpb_progress_max="100"
        app:cpb_progressbar_width="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarProgressGraphic"
        android:layout_width="248dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:max="100"
        app:layout_constraintStart_toStartOf="@+id/shadeslider"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
        android:id="@+id/shadeslider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/editPage_graphic_subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressCircle" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/editPage_graphic_subtitle2"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/seekBarProgressGraphic" />
    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/editPage_timeperiod_title"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/shadeslider" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34">

        <Spinner
            android:id="@+id/hour_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/hour"
            app:layout_constraintEnd_toEndOf="@+id/hour_spinner"
            app:layout_constraintStart_toStartOf="@+id/hour_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/min_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour_spinner"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:text="@string/minute"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/min_spinner"
            app:layout_constraintStart_toStartOf="@+id/min_spinner"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>